@@ -16,3 +16,4 @@ clean: $(bin_PROGRAMS)
 
 portmaker: portmaker.sh version.sh
 	$(SHELL) -c '. version.sh && sed -e "s/@VERSION@/$$VERSION/g" -e "s~@PREFIX@~$$PREFIX~g" $^ > $@'
+	chmod 755 $@
