@@ -1,5 +1,5 @@
 #! /bin/sh
-# makeport
+# portmaker
 
 VERSION=@VERSION@
 
@@ -13,7 +13,7 @@ ask "PACKAGE" "" PACKAGE
 ask "VERSION" "" VERSION
 ask "ARCHIVETYPE" "tar.gz" ARCHIVETYPE
 ask "ARCHIVEFILE" "$PACKAGE-$VERSION.$ARCHIVETYPE" ARCHIVEFILE
-ask "ARCHIVEHOME" "http:/www.${PACKAGE}.org" ARCHIVEHOME
+ask "ARCHIVEHOME" "http://www.${PACKAGE}.org" ARCHIVEHOME
 ask "ARCHIVEPATH" "/tmp" ARCHIVEPATH
 ask "DOWNLOADURI" "http://ftp.gnu.org/gnu/$PACKAGE" DOWNLOADURI
 ask "SRCDIR" "/usr/src/${PACKAGE}-${VERSION}" SRCDIR
@@ -25,17 +25,15 @@ ask "CXXFLAGS" "\$CFLAGS" CXXFLAGS
 PORTPATH=${SRCDIR}/mingwPORT
 ask "PORTPATH" "$PORTPATH" PORTPATH
 
-if [ ! -d $PORTPATH ]
-then
-  mkdir -p $PORTPATH
-fi
+eval PORTPATH=\"$PORTPATH\"
+[ -d "$PORTPATH" ] || mkdir -p "$PORTPATH"
 cat <<EOD>$PORTPATH/mingwPORT.ini
 PACKAGE=$PACKAGE
 VERSION=$VERSION
 ARCHIVETYPE=$ARCHIVETYPE
 ARCHIVEFILE=$ARCHIVEFILE
 ARCHIVEPATH=$ARCHIVEPATH
-ARCIVEHOME=$ARCHIVEHOME
+ARCHIVEHOME=$ARCHIVEHOME
 DOWNLOADURI=$DOWNLOADURI
 SRCDIR=$SRCDIR
 BLDDIR=$BLDDIR
